--- a/04_ゼミ/week2/seminar_memo.html
+++ b/04_ゼミ/week2/seminar_memo.html
@@ -12,19 +12,44 @@
 
     <button id="memo-input">保存</button>
     <div id="memo-container"></div>
+    <div>こんにちは</div>
+
     <script>
       const memoInput = document.getElementById("memo-input")
       const addButton = document.getElementById("add-Button")
       const memoContainer = document.getElementById("memo-container")
 
+      //配列を使う
+      let memos = []
+      console.log(memos)
+
+      //   let memos = ["こんにちは","こんばんは"]
+      //   console.log(memos[0])
+
+      //   localStorage.memos = "こんにちは"
+      //   const text = localStorage.memos
+      //   console.log(text)
+
+      //保存ボタンを押したときnメモを入れていく
       addButton.onclick = function() {
-        console.dir(memoInput)
-        const text = "コンんちは"
+        // console.dir(memoInput.value)
+        // console.dir(memoInput)
+        const text = memoInput.value
 
-        const div = document.createElement("div")
-        div.textContent = text
+        //配列に保存して
+        memos.push(text)
+        console.log(memos)
 
-        memoContainer.append(div)
+        //配列の内容を表示
+        memoContainer.innerHTML = ""
+
+        //配列に入ってる内容の分だけ繰り返したい
+        for (let i = 1; i < memos.length; i++) {
+          const div = document.createElement("div")
+          div.textContent = memos[i]
+
+          memoContainer.append(div)
+        }
       }
     </script>
   </body>
